# test-project

./: README.md  commutator.yang  main.cpp  meson.build  newCommutator.yang
MobileClient/: meson.build
MobileClient/api/: INetConfAgent.hpp
MobileClient/hpp/: Constants.hpp  MobileClient.hpp  NetConfAgent.hpp
MobileClient/source/: MobileClient.cpp  NetConfAgent.cpp
Tests/: meson.build
Tests/Mock/: NetConfAgentMock.hpp
Tests/Source/: MobileClientTest.cpp
task1/abstract_factory/: meson.build
task1/abstract_factory/builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  example_task
task1/abstract_factory/builddir/meson-info/: intro-buildsystem_files.json  intro-targets.json  meson-info.json
task1/abstract_factory/builddir/meson-logs/: meson-log.txt
task1/abstract_factory/include/: AbstractProductA.hpp  ConcreteFactory1.hpp
task2/abstract_factory/: meson.build
task2/abstract_factory/builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  example_task
task2/abstract_factory/include/: AbstractProductB.hpp
task2/abstract_factory/source/: ConcreteProductB1.cpp  ConcreteProductB2.cpp  meson.build
task3/: main.cpp
task3/abstract_factory/: meson.build
task3/abstract_factory/builddir/: .ninja_deps  compile_commands.json
task3/abstract_factory/include/: ConcreteFactory2.hpp  ConcreteProductA1.hpp  ConcreteProductB1.hpp  ConcreteProductB2.hpp
task3/abstract_factory/source/: ConcreteProductA1.cpp  ConcreteProductA2.cpp  meson.build
task3/abstract_factory/test/: ConcreteProductA1Test.cpp
task3/builddir/: .ninja_log  build.ninja
task3/builddir/meson-info/: intro-dependencies.json  intro-targets.json  meson-info.json
task3/builddir/meson-logs/: testlog.txt
task3/builddir/test/: testcase
task3/include/: AbstractFactory.hpp  ConcreteProductA2.hpp
task3/source/: ConcreteFactory1.cpp  ConcreteFactory2.cpp
task3/test/: meson.build
(+9 files in other folders)
