project('example', 'cpp')

inc = include_directories('include')

src = ['source/ConcreteFactory1.cpp', 'source/ConcreteFactory2.cpp', 'source/ConcreteProductA1.cpp',
	'source/ConcreteProductA2.cpp', 'source/ConcreteProductB1.cpp', 'source/ConcreteProductB2.cpp', 'main.cpp']

executable('example_task', sources : src, include_directories : inc)
